# metroninfo

./: LICENSE  README.md  pyproject.toml
.github/workflows/: dispatch.yml  testing.yml
drafts/v0.1/: MetronInfo.xsd  Sample.xml
drafts/v1.0/: MetronInfo.xsd  Sample.xml
drafts/v1.1/: MetronInfo.xsd
schema/v1.0/: Sample.xml
tests/: test.py
tests/test_files/v1.0/: dup_primary_attr.xml  valid.xml
